tests/ui/traits/next-solver/merge_candidates_with_subset_region_constraints_1.stderr
error[E0283]: type annotations needed
  --> $DIR/merge_candidates_with_subset_region_constraints_1.rs:25:5
   |
LL |     impls_bound::<((), _)>();
   |     ^^^^^^^^^^^^^^^^^^^^^^ cannot infer type of the type parameter `T` declared on the function `impls_bound`
   |
note: multiple `impl`s satisfying `((), _): Bound` found
  --> $DIR/merge_candidates_with_subset_region_constraints_1.rs:15:1
   |
LL | impl<'a, T> Bound for (T, &'a i32) where T: 'a {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl<'a> Bound for ((), &'a i32) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `impls_bound`
  --> $DIR/merge_candidates_with_subset_region_constraints_1.rs:13:19
   |
LL | fn impls_bound<T: Bound>() {}
   |                   ^^^^^ required by this bound in `impls_bound`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
